# scrapper-tool

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-release.yml  live-agent.yml  live-canary.yml  release.yml
docs/: E2E_TEST_PLAN.md  MODEL_RESEARCH.md  SETTINGS.md  agent-integration.md  http-sidecar.md  index.md  mcp.md  quickstart.md  recon.md
docs/agent-integration/: .gitkeep
docs/openapi/: openapi.json  openapi.yaml
docs/patterns/: a-json-api.md  b-embedded-json.md  c-css-microdata.md  d-hostile.md  e-llm-agent.md
docs/reference/: http.md  ladder.md  testing.md
docs/research/: 2026-04-30-landscape.md  do-not-adopt.md  tool-catalog.md
scripts/: dump_openapi.py
scripts/e2e/: README.md  bench_model.py  compare_benches.py  run_all.sh  test_captcha_tier0.py  test_captcha_tier2.py  test_errors.py  test_mcp_session.py  test_mcp_session_http.py  test_pattern_a.py  test_pattern_b.py  test_pattern_c.py  test_pattern_d.py  test_pattern_e1.py  test_pattern_e1_pydantic.py  test_pattern_e2.py
src/scrapper_tool/: __init__.py  _logging.py  adapter.py  canary.py  errors.py  http.py  http_server.py  ladder.py  mcp.py  testing.py
src/scrapper_tool/agent/: __init__.py  browse.py  extract.py  runner.py  types.py
src/scrapper_tool/agent/backends/: __init__.py  behavior.py  browser.py  captcha.py  fingerprint.py  llm.py
src/scrapper_tool/patterns/: __init__.py  b.py  c.py  d.py  e.py
tests/: canary_targets.yaml  conftest.py
tests/fixtures/agent/: crawl4ai_md.txt  history_replay.json  listing.html  turnstile_stub.html
tests/integration/: test_agent_live.py  test_image_smoke.sh  test_live_probes.py
tests/unit/: test_adapter_protocol.py  test_agent_backends.py  test_agent_browse.py  test_agent_captcha.py  test_agent_errors.py  test_agent_extract.py  test_agent_mcp.py  test_agent_runner.py  test_agent_types.py  test_canary.py  test_errors.py  test_http.py  test_http_server.py  test_ladder.py  test_mcp.py  test_patterns_b.py  test_patterns_c.py  test_patterns_d.py  test_smoke.py  test_testing_helpers.py
